--- a/ShimGen/ShimGen.csproj
+++ b/ShimGen/ShimGen.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <UseAppHost>true</UseAppHost>
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\Annotations\Godot.FSharp.Annotations.csproj" />
