--- a/ShimGen/ShimGen.csproj
+++ b/ShimGen/ShimGen.csproj
@@ -5,8 +5,21 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <UseAppHost>true</UseAppHost>
+    <IsPackable>true</IsPackable>
+    <PackageId>Godot.FSharp.ShimGen</PackageId>
+    <Title>Godot.FSharp.ShimGen</Title>
+    <Description>Generates C# shims for F# Godot scripts so Godot's C# tooling can consume them.</Description>
+    <Authors>YourName</Authors>
+    <RepositoryUrl>https://github.com/your-org/fsharp-with-shim</RepositoryUrl>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <PackageReadmeFile>README.md</PackageReadmeFile>
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\Annotations\Godot.FSharp.Annotations.csproj" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="README.md" Pack="true" PackagePath="/" />
+    <!-- buildTransitive target to auto-wire shims for consumers -->
+    <None Include="buildTransitive\Godot.FSharp.ShimGen.targets" Pack="true" PackagePath="buildTransitive/" />
   </ItemGroup>
 </Project>
