--- a/NuGet.Config
+++ b/NuGet.Config
@@ -2,6 +2,7 @@
 <configuration>
   <packageSources>
     <add key="nuget.org" value="https://api.nuget.org/v3/index.json" />
-    <add key="local" value="$(SolutionDir).nupkgs" />
+    <!-- Use a path relative to this file so it works on CI/act containers -->
+    <add key="local" value=".nupkgs" />
   </packageSources>
 </configuration>
