--- a/NuGet.Config
+++ b/NuGet.Config
@@ -1,5 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
+  <config>
+    <!-- Shorten NuGet global packages folder to avoid MAX_PATH issues in design-time restore on Windows -->
+    <add key="globalPackagesFolder" value=".nuget" />
+  </config>
   <packageSources>
     <add key="nuget.org" value="https://api.nuget.org/v3/index.json" />
     <!-- Use a path relative to this file so it works on CI/act containers -->
