CI: fail when no packages; robust versioning (GitVersion fallback) and artifact upload; add verify step. ShimGen: per-file hash + SourceFile header, design-time MSBuild fix, package DLL under lib/net8.0, cross-platform apphost off. Tests: content-based idempotency and same-outdir for rewrite checks.

--- a/ShimGen/Headsetsniper.Godot.FSharp.ShimGen.csproj
+++ b/ShimGen/Headsetsniper.Godot.FSharp.ShimGen.csproj
@@ -4,8 +4,12 @@
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-    <UseAppHost>true</UseAppHost>
+    <!-- Produce a cross-platform DLL for packaging -->
+    <UseAppHost>false</UseAppHost>
     <IsPackable>true</IsPackable>
+    <!-- Ensure the compiled DLL is included under lib/{tfm} in the NuGet package -->
+    <IncludeBuildOutput>true</IncludeBuildOutput>
+    <BuildOutputTargetFolder>lib</BuildOutputTargetFolder>
     <PackageId>Headsetsniper.Godot.FSharp.ShimGen</PackageId>
     <Title>Headsetsniper.Godot.FSharp.ShimGen</Title>
     <Description>Generates C# shims for F# Godot scripts so Godot's C# tooling can consume them.</Description>
