--- a/.github/workflows/pack.yml
+++ b/.github/workflows/pack.yml
@@ -113,8 +113,9 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: nupkgs
-          path: ./.nupkgs
+          path: ${{ github.workspace }}/.nupkgs
           if-no-files-found: error
+          include-hidden-files: true
 
   publish-nuget:
     name: Publish to NuGet.org
