--- a/ShimGen/ShimGen.csproj
+++ b/ShimGen/ShimGen.csproj
@@ -4,13 +4,16 @@
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-    <UseAppHost>true</UseAppHost>
+  <UseAppHost>false</UseAppHost>
     <IsPackable>true</IsPackable>
   <PackageId>Headsetsniper.Godot.FSharp.ShimGen</PackageId>
   <Title>Headsetsniper.Godot.FSharp.ShimGen</Title>
     <Description>Generates C# shims for F# Godot scripts so Godot's C# tooling can consume them.</Description>
-    <Authors>YourName</Authors>
-    <RepositoryUrl>https://github.com/your-org/fsharp-with-shim</RepositoryUrl>
+  <Authors>Sebastian Schwarz; headsetsniper@gmail.com</Authors>
+  <PackageProjectUrl>https://github.com/SebastianAtWork/godot-fsharp-shim</PackageProjectUrl>
+  <RepositoryUrl>https://github.com/SebastianAtWork/godot-fsharp-shim</RepositoryUrl>
+  <RepositoryType>git</RepositoryType>
+  <PackageTags>Godot;F#;FSharp;C#;interop;source-generator;game-dev;shim</PackageTags>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <PackageReadmeFile>README.md</PackageReadmeFile>
     <!-- Version will be set by GitVersion in CI: do not hardcode here -->
