--- a/NuGet.Config
+++ b/NuGet.Config
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <config>
-    <!-- Shorten NuGet global packages folder to avoid MAX_PATH issues in design-time restore on Windows -->
+    <!-- Shorten NuGet global packages folder to avoid MAX_PATH issues on Windows -->
     <add key="globalPackagesFolder" value=".nuget" />
   </config>
   <packageSources>
     <add key="nuget.org" value="https://api.nuget.org/v3/index.json" />
-    <!-- Use a path relative to this file so it works on CI/act containers -->
-    <add key="local" value=".nupkgs" />
+    <add key="local-shimgen" value=".nuget-local" />
+    <add key="local-ci" value=".nupkgs" />
   </packageSources>
 </configuration>
